--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ a:hover {
 
 .logo {
   font-size: 2rem;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .logo:hover {
